--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="w-full md:w-1/2 relative">
                     <!-- lazy loading para imagen secundaria -->
-                    <img src="/FOTOS/3sentada_presentacion.JPG" alt="Cristina Yules presentación" loading="lazy" width="600" height="800" class="w-full h-auto relative z-10 shadow-lg border-4 border-white">
+                    <img src="/FOTOS/3sentada_presentacion.jpg" alt="Cristina Yules presentación" loading="lazy" width="600" height="800" class="w-full h-auto relative z-10 shadow-lg border-4 border-white">
                 </div>
                 
                 <div class="w-full md:w-1/2 text-lg leading-relaxed text-brown-900 font-medium">
