--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="w-full md:w-1/2 relative">
                     <!-- lazy loading para imagen secundaria -->
-                    <img src="/FOTOS/3sentada_presentacion.jpg" alt="Cristina Yules presentación" loading="lazy" width="600" height="800" class="w-full h-auto relative z-10 shadow-lg border-4 border-white">
+                    <img src="/FOTOS/3sentada_presentacion.jpg" alt="Cristina Yules presentación" width="600" height="800" class="w-full h-auto relative z-10 shadow-lg border-4 border-white">
                 </div>
                 
                 <div class="w-full md:w-1/2 text-lg leading-relaxed text-brown-900 font-medium">
@@ -407,7 +407,7 @@
                     </div>
                     <div class="md:col-span-1 min-w-[200px] md:min-w-0 snap-center flex flex-col">
                         <div class="aspect-[9/16] bg-black rounded-2xl overflow-hidden shadow-lg border border-gray-200">
-                            <video src="/VIDEOS/EN LA CALLE/petroni.MP4#t=0.1" class="w-full h-full object-cover" controls playsinline preload="none"></video>
+                            <video src="/VIDEOS/EN LA CALLE/petroni.mp4#t=0.1" class="w-full h-full object-cover" controls playsinline preload="none"></video>
                         </div>
                         <p class="text-center font-impact text-brown-800 mt-3 text-lg uppercase tracking-wide">PETRONI</p>
                     </div>
